--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
-  background: linear-gradient(135deg, #ff6f91, #ff9671, #ffc75f);
+  background: #663074;
   min-height: 100vh;
 }
 
 header {
-  background: #845ec2;
+  background: #414042;
   padding: 20px;
   text-align: center;
   color: #fff;
@@ -33,10 +33,10 @@ label {
 
 input, select {
   width: 100%;
-  padding: 12px;
+  padding: 10px;
   margin-bottom: 15px;
   border-radius: 8px;
-  border: 2px solid #ccc;
+  border: 2px solid #4b4a4a;
   font-size: 15px;
 }
 
